--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Te invito a celebrar mis 15 años.
 
 <div class="caja1">
   
-<p class="parrafoubicacion"> Lugar: Salón Recreativo.  <br> Dirección: --- <br> Laborde <br>
+<p class="parrafoubicacion"> Lugar: Salón Recreativo.  <br> Dirección: Belgrano 303 <br> Laborde <br>
   </p> 
 
 
